Porting WPF app to Windows Forms hoping for better boot time - the WPF app takes too long to open after the self-extraction

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,4 @@
 * document command line way of deloying using sfx
 * clean for web projects
+* Make the defaults smart enough to not care about the file extension (should be able to parse from built in properties)
+* TeamCity.targets is ugly - needs to know too much about other properties.  Perhaps use ProjectName throughout?
