--- a/TODO.txt
+++ b/TODO.txt
@@ -13,14 +13,8 @@
   * Have option to show entire file to prevent security hole (also always save only properties to prevent any additional code from executing)
 * Fix templates!
 * Just have clients add to @PackageFiles, with metadata to store root dir
-
-For deployer:
-
-Import EnvironmentFiles.targets
-- copy environment files
-- set IEnvironmentReader = correct class in deployer
-Import Deployer.targets
-- Import Sfx
--- Import Package
-- Splice config file, using IEnvironmentsReader
-- Set @DeployerFiles for sfx
+* Remove absolute dir refs for scripts in CMDirectory
+* TeamCity
+  * Force client to provide ProjectName
+  * Error if not there
+  * Try using relative pathin 
