Refactoring UI to enable different strategies for loading environment properties and for deploying (e.g. using NAnt)

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,7 @@
 * Remove absolute dir refs for scripts in CMDirectory
   * DotNet, Sfx
 * Add OnErrorTargets
+* MSBuildCommandBuilder - AddEnvironmentProperties; doesn't that make deploy's non-repeatable without closing and re-opening the deploy form?
 
 
 Environment Strategy:
