continuing to add tests for UI

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,7 @@
 * Remove absolute dir refs for scripts in CMDirectory
   * DotNet, Sfx
 * Add OnErrorTargets
+* Duplication on saving b/t command builder/environment loader
 * Make IList<Keyvaluepair<string, string>> into a class - PropertyList - with fluent intf for adding
 
 
